Servicio.yml
apiVersion: v1
kind: Service
metadata:
  name: tiendadehelados-service
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: tiendadehelados
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
